server/compilers/goLiteJS/src/test/ml1/invalid/func4.go
// unnamed input parameter
package main

func f(int) {
    return
}
